--- a/src/app/nav/nav.component.html
+++ b/src/app/nav/nav.component.html
@@ -1,6 +1,6 @@
 <div class="navbar">
     <div class="site-name">
-        <h2>e-shopping</h2>
+        <h2>{{applicationName}}</h2>
     </div>
     <div class="site-menu">
         <a href="#">HOME</a>
